# .amisc

./: .vimrc  README.md  a.out  main_asan.cpp
asm/: main.cpp  main.s.gcc  main.s.intel
cmake_test/: CMakeLists.txt  main.cpp
cmake_test/booming/proven_ground/chaos/_source/_engine/scripts/generate_project/game/: 2  generate_vs2019_standard.bat
dev_ops/: .git.note.txt  .note.txt
lua_test/: README.MD  a.out  ext.lua  main.cpp
lua_test/lua-5.3.3/src/: lua  luac
new_cpp/: a.out  main.cpp
vim/: .note_202212.txt  test1.txt
vscode/: .note.txt
